<resources>
    <string name="app_name">TestApplication</string>
    <string name="sign_in_page_title">Sign in</string>
    <string name="sign_in_fragment_already_have_an_account">Already have an account?</string>
    <string name="sign_in_fragment_log_in">Log in</string>
    <string name="sign_in_fragment_sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_fragment_google_icon_description">The icon of Google</string>
    <string name="sign_in_fragment_sign_in_with_apple">Sign in with Apple</string>
    <string name="sign_in_fragment_apple_icon_description">The icon of Apple</string>
    <string name="sign_in_fragment_first_name_hint">First name</string>
    <string name="sign_in_fragment_last_name_hint">Last name</string>
    <string name="sign_in_fragment_email_hint">Email</string>
    <string name="recycler_view_latest_products_item_price">$ %.3f</string>
    <string name="price_double_2_symbols_after_dot">$ %.2f</string>
    <string name="recycler_view_flash_sale_products_item_discount">%d%% off</string>
    <string name="edit_text_error_message">The field can\'t be empty</string>
    <string name="empty_field_error">The field can\'t be empty</string>
    <string name="email_field_error">The value is not an email</string>
    <string name="text_view_welcome_back">Welcome back</string>
    <string name="text_view_password">Password</string>
    <string name="password_visibility_image_description">The image of password input symbols visibility</string>
    <string name="toast_user_is_already_exists">User %s is already exists</string>
    <string name="image_view_title_application_logo_description">Application logo</string>
    <string name="text_view_location">Location</string>
    <string name="text_view_hint_what_are_you_looking_for">What are you looking for?</string>
    <string name="image_view_phones_description">The image of phones category</string>
    <string name="text_view_phones">Phones</string>
    <string name="image_view_headphones_description">The image of headphones category</string>
    <string name="text_view_headphones">Headphones</string>
    <string name="image_view_games_description">The image of _games category</string>
    <string name="text_view_games">Games</string>
    <string name="image_view_cars_description">The image of cars category</string>
    <string name="text_view_cars">Cars</string>
    <string name="image_view_furniture_description">The image of furniture category</string>
    <string name="text_view_furniture">Furniture</string>
    <string name="image_view_kids_description">The image of kids category</string>
    <string name="text_view_kids">Kids</string>
    <string name="text_view_latest">Latest</string>
    <string name="text_view_flash_sale">Flash sale</string>
    <string name="text_view_brands">Brands</string>
    <string name="text_view_change_photo">Change photo</string>
    <string name="text_view_satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="buttn_text_upload_item">Upload item</string>
    <string name="button_text_trade_store">Trade store</string>
    <string name="button_text_payment_method">Payment method</string>
    <string name="button_text_balance">Balance</string>
    <string name="button_text_trade_history">Trade history</string>
    <string name="button_text_restore_purchase">Restore purchase</string>
    <string name="button_text_help">Help</string>
    <string name="button_text_log_out">Log out</string>
    <string name="button_text_1593">$ 1593</string>
    <string name="image_view_the_image_of_product_description">The image of product</string>
    <string name="image_view_the_icon_of_sale_product_description">The icon of sale product</string>
    <string name="button_add_to_cart">ADD TO CART</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view_selected_product_description">The image of selected product</string>
    <string name="text_view_color">Color:</string>
    <string name="text_view_number_of_reviews">(%d reviews)</string>
    <string name="text_viewquantity">Quantity:</string>


</resources>